# corpus-nz-hansard

./: .gitattributes  .gitignore  .vale.ini  .zenodo.json  CITATION.cff  DATASET_CARD.md  Makefile  NOTICE.md  README.md  RELEASE_NOTES.md  VERSION  _analysis.txt  _check_wd_labels.py  _check_wd_labels2.py  _crossref_wiki.py  _fetch_wiki.py  _inspect_output.txt  _unmatched.txt  _wiki_nz_mps.json  bills-current  findings.md  progress.md  pyproject.toml  requirements.txt  shared_utils.py  subagents.yaml  task_plan.md  test_support.py  typos.toml
.github/: dependabot.yml
.swarm/: config.json
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md
derived/: corpus_wide_member_identity_authority.json  create_member_registry.py  crossref_bills_api.json  member_identity_authority.json  member_registry.json  parliament_current_mps.json  party_attribution_authority.json  triangulated_member_authority.json  unmatched_comprehensive_resolution.json  unmatched_final_resolution.json  unmatched_remaining_checked.json  unmatched_resolved.json  unmatched_resolved_via_wikipedia.json  wikidata_nz_mps.json  wikipedia_mp_lists.json
docs/: HUGGINGFACE_SETUP.md  ZENODO_SETUP.md  akoma-ntoso-mapping.md  akoma-ntoso-public-endpoint-release.md  authority-source-discovery.md  bleeding-edge-versioning-ci-quality.md  canonical-id-uri-policy.md  cap-parlacap-public-endpoint-release.md  cap-parlacap-topic-mapping.md  component-contracts.md  contracts.md  corpus-family-engineering-alignment.md  corpus-family-naming-publication-alignment.md  corpus-wide-member-identity-coverage-review.md  corpus-wide-member-identity-release.md  corpus-wide-party-attribution-release.md  cross-repo-dataset-architecture.md  datacite-export-contract.md  dependency-policy.md  derived-fields-validation.md  duckdb-analysis.md  endpoint-contracts.md  entity-linking-exploratory-outputs.md  generated-output-policy.md  gold-evaluation-datasets.md  historical-coverage-audit.md  historical-sitting-official-exports.md  historical-sitting-reconciliation.md  hosting-decision-matrix.md  interoperability-design.md  interoperability-requirements-moscow.md  licensing-and-provenance.md  member-identity-resolution.md  neutral-component-model.md  normalization-contract.md  nz-parliamentary-procedure-model.md  osf-optional-mirror-policy.md  parlamint-nz-mapping.md  parlamint-nz-public-endpoint-release.md  party-attribution-provenance.md  (+34 more)
fixtures/: gold_evaluation_samples.json  neutral_components.json  nz_parliamentary_procedure_samples.json
manifests/: akoma_ntoso_public_endpoint_validation.json  akoma_ntoso_validation_manifest.json  authority_sources.json  cap_parlacap_public_endpoint_validation.json  cap_parlacap_topic_codebook.json  cap_parlacap_topic_validation_manifest.json  corpus_family_engineering_alignment.json  corpus_family_publication_alignment.json  corpus_wide_member_identity_validation.json  corpus_wide_party_attribution_validation.json  dependency_extras_policy.json  duckdb_validation.json  entity_linking_exploratory_outputs.json  gold_evaluation_datasets.json  historical_coverage_audit.json  historical_sitting_inventory.json  historical_sitting_official_exports.json  historical_sitting_reconciliation.json  id_uri_policy.json  member_identity_resolution_package.json  member_identity_resolution_validation.json  metadata_packages_manifest.json  neutral_component_model.json  neutral_component_validation_manifest.json  normalization_manifest.json  normalization_validation.json  nz_parliamentary_procedure_model.json  osf_optional_mirror_policy.json  parlamint_nz_public_endpoint_validation.json  parlamint_nz_validation_manifest.json  party_attribution_provenance_package.json  public_surface_audit.json  (+30 more)
(+701 files in other folders)
