[project]
name = "corpus-nz-hansard"
version = "0.2.0"
description = "Document-level New Zealand Hansard corpus release tooling."
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.5.3",
  "huggingface-hub>=1.18.0",
  "jsonschema>=4.26.0",
  "polars>=1.41.2",
  "pyarrow>=21.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=6.0.0",
  "ruff==0.15.16",
  "taplo==0.9.3",
  "ty==0.0.46",
  "typos==1.47.2",
  "uv==0.11.8",
  "zizmor==1.25.2",
  "hypothesis>=6.100.0",
  "scalene>=1.5.44",
  "pre-commit>=4.0.0",
]
embeddings = ["FlagEmbedding>=1.2.0", "torch>=2.0.0", "transformers>=5.10.2"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".test-tmp", ".tmp", "generated", "*.mjs"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM",
    "A", "ARG", "C4", "COM", "DJ", "DTZ", "EM", "ERA", "EXE",
    "FA", "FLY", "FURB", "ICN", "INP", "INT", "ISC", "LOG",
    "NPY", "PD", "PERF", "PGH", "PIE", "PL", "PLC", "PLE", "PLR", "PLW",
    "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S",
    "SLF", "T10", "T20", "TC", "TID", "TRY", "W",
]
ignore = [
    "E501",
    "COM812",
    "ISC001",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401",
    "S404", "S603", "S607",
    "PLW2901",
    "PLR2004", "PLR0913", "PLR0912", "PLR0915",
    "ERA001", "EXE001",
    "TC001", "TC002", "TC003",
    "FA100",
    "ICN001",
    "PLC0415",
    "TRY301", "TRY003", "TRY004",
    "EM101", "EM102",
    "PERF401",
    "RUF100",
    "PLW0603",
    "N814",
    "S110", "S311",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", "T20", "SLF", "ARG", "PLR2004",
    "D", "ERA001", "INP001", "S106", "S107",
    "PGH001", "PIE790", "ANN", "PLC0415",
    "EM", "TRY", "PERF", "FLY002", "PT017",
    "C408", "TC006", "Q000", "S314",
    "PT009", "PT027",
    "E402",
]
"scripts/*" = [
    "INP001", "ANN001", "ANN201", "T20", "PERF",
    "EM", "TRY", "PLR0912", "F401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.coverage.run]
source = ["scripts"]
omit = ["*/tests/*"]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Fast mock-isolated unit tests",
    "integration: Cross-component integration tests",
    "smoke: CLI smoke tests that exercise the full toolchain",
    "hypothesis: Property-based tests using Hypothesis",
]

[tool.ty.environment]
root = ["scripts", "tests"]
python-version = "3.11"

[tool.ty.rules]
all = "error"

[tool.scalene]
cpu = true
gpu = false
memory = true
profile_all = false
reduced_profile = true
